--- a/part4/place.html
+++ b/part4/place.html
@@ -11,8 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    
 </head>
+
 <body>
   <header>
     <div id="viewport">
@@ -22,7 +22,6 @@
 
       </div>
     </div>
-      
    </header>
     <main>
       <div class="left-col">
@@ -30,25 +29,17 @@
           <!--galerie d'image-->
         </section>
       </div>
+      <div class="right-col">
+        <div id="reservation-box" class="reservation-card">
+
+        </div>
 
       </div>
+      <div id="map" style="width: 100%; height: 400px; margin: 30px 0px;"></div>
+
         <section id="reviews">
             <h2>Reviews</h2>
         </section>
-        <section id="add-review" style="display: none;">
-            <h2>Add a Review</h2>
-            <form id="review-form">
-                <label for="review-text">Review:</label>
-                <textarea id="review-text" name="review-text" required></textarea>
-
-                <label for="rating">Rating (1-5):</label>
-                <input type="number" id="rating" name="rating" min="1" max="5" required>
-
-                <button type="submit">Submit</button>
-            </form>
-        </section>
-        <div id="map" style="width: 100%; height: 400px; margin: 30px 0;"></div>
-
     </main>
     <footer class="footer-section">
       <div class="container">
@@ -63,7 +54,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-4 col-md-4 mb-30">
+            <div class="col-xl-4 col-md-4 mb-30">http://127.0.0.1:5501/part4/mon_compte.html
               <div class="single-cta">
                 <i class="fas fa-phone"></i>
                 <div class="cta-text">
@@ -152,8 +143,8 @@
             <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
               <div class="footer-menu">
                 <ul>
-                  <li><a href="#">maison</a></li>
-                  <li><a href="#">Taaeez</a></li>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Terms</a></li>
                   <li><a href="#">Privacy</a></li>
                   <li><a href="#">Policy</a></li>
                   <li><a href="#">Contact</a></li>
@@ -164,8 +155,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGpVpviHYTgaGD-QGGiEUl3ALl4F-Rry4" async defer></script>
     <script src="js/detail_lieux.js"></script>
     <script src="js/navbar.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGpVpviHYTgaGD-QGGiEUl3ALl4F-Rry4"></script>
-  </body>
+</body>
 </html>
